--- a/index.html
+++ b/index.html
@@ -68,20 +68,23 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 ml-3">
-          <img style="width: 200px; height: 200px;" />
+          <img
+            class="img-thumbnail shadow bg-white rounded"
+            src="assets/headshot.jpg"
+          />
         </div>
       </div>
     </section>
 
     <!-- Portfolio Section -->
     <section class="container" id="portfolio">
-      <h2 class="text-center text-lg-left mt-4 mb-0">
+      <h2 class="text-center mt-4 mb-0">
         Portfolio
       </h2>
       <hr class="mt-2 mb-5" />
       <div class="row text-center text-lg left">
         <div class="col-lg-12 col-12">
-          <h3>Password Generator</h3>
+          <h4>Password Generator</h4>
           <a
             href="https://medszilla26.github.io/password-generator/"
             class="d-block mb-4 h-100"
@@ -95,7 +98,7 @@
           </a>
         </div>
         <div class="col-lg-12 col-12">
-          <h3>Code Quiz</h3>
+          <h4>Code Quiz</h4>
           <a
             href="https://medszilla26.github.io/timed-code-quiz/"
             class="d-block mb-4 h-100"
@@ -109,7 +112,7 @@
           </a>
         </div>
         <div class="col-lg-12 col-12">
-          <h3>Brewery Finder</h3>
+          <h4>Brewery Finder</h4>
           <a
             href="https://brandonejenkins.github.io/Beer-Finder/"
             class="d-block mb-4 h-100"
