--- a/indexv2.html
+++ b/indexv2.html
@@ -167,10 +167,44 @@
                         <label for="name" class="mb-0">Name</label>
                         <div class="row mb-1">
                             <div class="col-lg-12">
-                                <input type="text" name="name" id="name" class="form-control" required="">
+                                <input 
+                                type="text" 
+                                name="name" 
+                                id="name" 
+                                class="form-control" 
+                                required="">
                             </div>
                         </div>
                         <label for="email" class="mb-0">Email</label>
+                        <div class="row mb-1">
+                            <div class="col-lg-12">
+                                <input 
+                                type="text"
+                                name="email"
+                                class="form-control"
+                                required="">
+                            </div>
+                        </div>
+                        <label for="message" class="mb-0">Message</label>
+                        <div class="row mb-1">
+                            <div class="col-lg-12">
+                                <textarea
+                                rows="6"
+                                name="message"
+                                id="message"
+                                class="form-control"
+                                required=""
+                                ></textarea>
+                            </div>
+                        </div>
+
+                        <!-- Form Submit Button -->
+                        <button 
+                        type="submit"
+                        class="btn btn-secondary btn-lg float-right"
+                        >
+                    <i class="fa fa-paper-plane mr-2 fa-3"></i>
+                    Send</button>
                     </fieldset>
                 </form>
             </div>
