--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/yeti/bootstrap.min.css"
-
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap"
-      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -151,7 +145,7 @@
                       <img src="assets/ReadMeGen.png" alt="screengrab of Good Read Me Generator assignment" class="card-img-top"/>
                   </div>
                   <div class="card-body bg-white">
-                    <a href="" class="btn btn-sm btn-secondary" target="blank">Live Site</a>  
+                    <a href="assets/img.html" class="btn btn-sm btn-secondary" target="new">Live Site</a>  
                     <a href="https://github.com/medszilla26/good-readme-generator" class="btn btn-sm btn-secondary" target="blank">GitHub Repo</a>
                 </div>
               </div>     
@@ -185,7 +179,7 @@
             <div class="card-body">
                 <form class="form" role="form" autocomplete="off">
                     <fieldset>
-                        <label for="name" class="mb-0">Name</label>
+
                         <div class="row mb-1">
                             <div class="col-lg-12">
                                 <input 
@@ -193,20 +187,35 @@
                                 name="name" 
                                 id="name" 
                                 class="form-control" 
-                                required="">
+                                required=""
+                                placeholder="Your Name">
                             </div>
                         </div>
-                        <label for="email" class="mb-0">Email</label>
+
                         <div class="row mb-1">
                             <div class="col-lg-12">
                                 <input 
                                 type="text"
                                 name="email"
+                                id="email"
                                 class="form-control"
-                                required="">
+                                required=""
+                                placeholder="Your Email Address">
                             </div>
                         </div>
-                        <label for="message" class="mb-0">Message</label>
+
+                        <div class="row mb-1">
+                            <div class="col-lg-12">
+                                <input
+                                type="text"
+                                name="subject"
+                                id="subject"
+                                class="form-control"
+                                required=""
+                                placeholder="Subject">
+                             </div>
+                        </div>
+
                         <div class="row mb-1">
                             <div class="col-lg-12">
                                 <textarea
@@ -215,6 +224,7 @@
                                 id="message"
                                 class="form-control"
                                 required=""
+                                placeholder="Leave Me A Message"
                                 ></textarea>
                             </div>
                         </div>
@@ -294,9 +304,12 @@
                             <i class="fa fa-phone mr-3"></i>(832) 904-1663
                         </a>
                     </p>
+                    <br>
+                        <p class="copyright">© Copyright 2020</p>
             </div>
         </div>
     </div>
+
     </footer>
 
     <script
